--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mymed</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 
 </head>
 <body>
@@ -37,7 +37,7 @@
 <section class="home" id="home">
 
     <div class="image">
-        <img src="home-img.svg" alt="">
+        <img src="public/home-img.svg" alt="">
     </div>
 
     <div class="content">
@@ -147,7 +147,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="about-img.svg" alt="">
+            <img src="public/about-img.svg" alt="">
         </div>
 
         <div class="content">
@@ -172,7 +172,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="doc-1.jpeg" alt="">
+            <img src="public/doc-1.jpeg" alt="">
             <h3>Siddhartha</h3>
             <span>Biologist</span>
             <div class="share">
@@ -184,7 +184,7 @@
         </div>
 
         <div class="box">
-            <img src="doc-2.jpg" alt="">
+            <img src="public/doc-2.jpg" alt="">
             <h3>Naresh</h3>
             <span>cardiothoracic surgeon</span>
             <div class="share">
@@ -196,7 +196,7 @@
         </div>
 
         <div class="box">
-            <img src="doc-3.webp" alt="">
+            <img src="public/doc-3.webp" alt="">
             <h3>Sudhansu Bhattacharyya</h3>
             <span>Cardiac surgeon</span>
             <div class="share">
@@ -208,7 +208,7 @@
         </div>
 
         <div class="box">
-            <img src="doc-4.jpg" alt="">
+            <img src="public/doc-4.jpg" alt="">
             <h3>Surbhi Anand</h3>
             <span>Endodontist</span>
             <div class="share">
@@ -220,7 +220,7 @@
         </div>
 
         <div class="box">
-            <img src="doc-5.jpg" alt="">
+            <img src="public/doc-5.jpg" alt="">
             <h3>Ashish Sabharwal</h3>
             <span>Urologist</span>
             <div class="share">
@@ -232,7 +232,7 @@
         </div>
 
         <div class="box">
-            <img src="doc-6.jpg" alt="">
+            <img src="public/doc-6.jpg" alt="">
             <h3>Sanjay Sachdeva</h3>
             <span>Otorhinolaryngologist</span>
             <div class="share">
@@ -258,7 +258,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="book-img.svg" alt="">
+            <img src="public/book-img.svg" alt="">
         </div>
 
         <form id="appointmentForm">
@@ -285,7 +285,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="pic-1.jpg" alt="">
+            <img src="public/pic-1.jpg" alt="">
             <h3>Rama</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -298,7 +298,7 @@
         </div>
 
         <div class="box">
-            <img src="pic-2.jpg" alt="">
+            <img src="public/pic-2.jpg" alt="">
             <h3>Naveen</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -354,7 +354,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="blog-2.jpg" alt="">
+                <img src="public/blog-2.jpg" alt="">
             </div>
             <div class="content">
                 <div class="icon">
@@ -369,7 +369,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="blog-1.jpg" alt="">
+                <img src="public/blog-1.jpg" alt="">
             </div>
             <div class="content">
                 <div class="icon">
@@ -454,7 +454,7 @@
 
 <!-- footer section ends -->
 <!-- custom js file link  -->
-<script src="script.js"></script>
+<script src="public/script.js"></script>
 
 </body>
 </html>
